[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/main/ui/chat/ChatLineLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=3]
[ext_resource path="res://src/main/puzzle/tutorial/tutorial-messages.gd" type="Script" id=4]
[ext_resource path="res://src/main/puzzle/tutorial/tutorial-hud.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/chat/ChatPanelTween.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/ui/chat/ChatLinePanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/main/ui/chat/frame-pop-in.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/main/ui/chat/frame-pop-out.wav" type="AudioStream" id=13]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="TutorialHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="Control" parent="."]
margin_right = 360.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 180, 185 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="Messages" instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 170, 175 )
panel_sizes = [ Vector2( 340, 110 ), Vector2( 340, 145 ), Vector2( 340, 215 ), Vector2( 340, 300 ), Vector2( 340, 350 ) ]

[node name="Label" parent="Messages" instance=ExtResource( 2 )]
margin_left = -140.0
margin_right = 140.0
panel_padding = Vector2( 40, 40 )
chat_line_panel_path = NodePath("../Panel")

[node name="QueueTimer" type="Timer" parent="Messages"]
wait_time = 2.5
one_shot = true

[node name="Tween" parent="Messages" instance=ExtResource( 6 )]

[node name="PopInSound" type="AudioStreamPlayer" parent="Messages"]
stream = ExtResource( 12 )
volume_db = -14.0
bus = "Sound Bus"

[node name="PopOutSound" type="AudioStreamPlayer" parent="Messages"]
stream = ExtResource( 13 )
volume_db = -14.0
bus = "Sound Bus"

[node name="SkillTallyItems" type="Panel" parent="."]
margin_left = 774.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SkillTallyItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -168.0
margin_right = 110.0
margin_bottom = 168.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZIndex" type="Node2D" parent="."]
z_index = 30
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="ZIndex"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="all_text_shown" from="Messages/Label" to="Messages" method="_on_Label_all_text_shown"]
[connection signal="timeout" from="Messages/QueueTimer" to="Messages" method="_on_QueueTimer_timeout"]
[connection signal="pop_out_completed" from="Messages/Tween" to="Messages" method="_on_Tween_pop_out_completed"]
